--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "embedme": "embedme blog-posts/**/*.md",
     "prettier:base": "yarn run prettier \"**/*.{js,json,scss,md,ts,html,component.html}\"",
     "prettier:write": "yarn run prettier:base --write",
-    "prettier:check": "yarn run prettier:base -check",
+    "prettier:check": "yarn run prettier:base --check",
     "embedme:check": "yarn run embedme --verify",
     "embedme:write": "yarn run embedme",
     "dev-to-git": "dev-to-git"
