--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "prettier": "prettier",
     "embedme": "embedme blog-posts/**/*.md",
     "prettier:base": "yarn run prettier \"**/*.{js,json,scss,md,ts,html,component.html}\"",
-    "prettier:write": "yarn run prettier:base --write",
-    "prettier-exec": "yarn run prettier:base",
+    "prettier:write": "yarn run prettier:base --write \"**/*.{js,json,scss,md,ts,html,component.html}\"",
     "prettier:check": "yarn run prettier:base --check",
     "embedme:check": "yarn run embedme --verify",
     "embedme:write": "yarn run embedme",
