--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prettier": "prettier",
     "embedme": "embedme blog-posts/**/*.md",
     "prettier:base": "yarn run prettier \"**/*.{js,json,scss,md,ts,html,component.html}\"",
-    "prettier:write": "yarn run prettier --write ./dev-to-git.json",
+    "prettier:write": "yarn run prettier:base --write ",
     "prettier:check": "yarn run prettier:base --check",
     "embedme:check": "yarn run embedme --verify",
     "embedme:write": "yarn run embedme",
@@ -17,6 +17,6 @@
   "dependencies": {
     "dev-to-git": "1.4.9",
     "embedme": "1.22.0",
-    "prettier": "2.6.2"
+    "prettier": "^2.6.2"
   }
 }
