--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,11 +26,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build]
     steps:
-#      - name: Checkout Repo
-#        uses: actions/checkout@master
-#
-#      - name: Install Dependencies
-#        uses: bahmutov/npm-install@v1
+      - name: Checkout Repo
+        uses: actions/checkout@master
+
+      - name: Install Dependencies
+        uses: bahmutov/npm-install@v1
 
       - name: Deploy to dev.to
         run: DEV_TO_GIT_TOKEN=${{ secrets.DEV_TO_GIT_TOKEN }} yarn run dev-to-git
