--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,17 @@ jobs:
 
       - name: Install textlint
         run: 'npm install --save-dev textlint textlint-rule-ginger'
+      
+      - name: Run textlint
+        run: textlint --rule -f checkstyle "blog-posts/**/*.md" >> .textlint.log
+
+      - name: Run reviewdog
+      if: failure()
+      env:
+        REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        cat .textlint.log
+        cat .textlint.log | reviewdog -f=checkstyle -name="textlint" -reporter="github-pr-review"
 
       - name: Run Prettier
         run: yarn run prettier:check
