--- a/.textlintrc
+++ b/.textlintrc
@@ -4,7 +4,7 @@
           "ignore": []
       },
       "rousseau":{
-          "showLebels": ["suggestion", "warning", "error"]
+          "showLevels": ["suggestion", "warning", "error"]
       }
     }
 }
