--- a/.textlintrc
+++ b/.textlintrc
@@ -2,6 +2,11 @@
     "rules": {
       "common-misspellings": {
           "ignore": []
+      },
+      "spellchecker": {
+          "skipWords": [],
+          "skipRegExps": [],
+          "skipNodeTypes": ['Link', 'Image', 'BlockQuote', 'Emphasis', 'Code'],
       }
     }
 }
