--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,9 @@
 name: Build and Deploy
 
 on:
-  pull_request:
+  push:
     branches: [ main ]
+  pull_request:
 
 jobs:
   build:
@@ -53,8 +54,8 @@ jobs:
 
   deploy:
     name: Deploy
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     runs-on: ubuntu-latest
-    needs: [build]
     steps:
       - name: Checkout Repo
         uses: actions/checkout@master
