fix github workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,11 @@
-name: Build and Deploy
+name: Build
 
 on:
-  push:
-    branches: [main]
   pull_request:
 
 jobs:
   build:
     name: Build
-    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -52,17 +49,16 @@ jobs:
 
       - name: Run Embedme
         run: yarn run embedme:check
-
-  deploy:
-    name: Deploy
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@master
-
-      - name: Install Dependencies
-        uses: bahmutov/npm-install@v1
-
-      - name: Deploy to dev.to
-        run: DEV_TO_GIT_TOKEN=${{ secrets.DEV_TO_GIT_TOKEN }} yarn run dev-to-git
+#  deploy:
+#    name: Deploy
+#    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout Repo
+#        uses: actions/checkout@master
+#
+#      - name: Install Dependencies
+#        uses: bahmutov/npm-install@v1
+#
+#      - name: Deploy to dev.to
+#        run: DEV_TO_GIT_TOKEN=${{ secrets.DEV_TO_GIT_TOKEN }} yarn run dev-to-git
